# decimaltodoubleword

./: README.md  decimaltodoubleword.py  init.py  pyproject.toml
