[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "decimaltodoubleword"
author = "Sascha Hoeche"
author-email = "sascha.hoeche@gmx.com"
home-page = "https://github.com/saschahoeche"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description-file = "README.md"

